# interwhen

./: output_49108878.txt  pyproject.toml
examples/: text_replacement_example.py
interwhen/: interject_test.py
scripts/: sol_text_replacement.sh
slurm_logs/49108878/: text_replacement_49108878.err  text_replacement_49108878.out
