[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interwhen"
version = "0.1.0"
description = "A Python library for verifiable reasoning with large language models."
authors = []
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "regex",
    "tiktoken",
    "vllm",
    "z3-solver"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
]
math = [
    "sympy",
    "numpy",
]
logic = [
    "z3-solver",
]

[project.urls]
Homepage = "https://github.com/yourusername/interwhen"
Repository = "https://github.com/yourusername/interwhen"

[tool.setuptools.packages.find]
where = ["."]
include = ["interwhen*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
